tests/parse-errors/issue053-2.zir
fun comp f() {
  times 1 { 
    x <- take; 
  }
}

let comp main = read[int] >>> write[int]
